criando pagina home

--- a/index.html
+++ b/index.html
@@ -3,9 +3,127 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
+    <title>Blog | Tiagolimar</title>
 </head>
 <body>
+    <h1 id="home">Tags HTML</h1>
+
+    <div id="pai">
+        pai
+        <div id="filho">filho</div>
+    </div>
+
+    <h2>Lista Não Ordenada</h2>
+    <ul class="lista">
+        <li>Item 1</li>
+        <li>Item 1</li>
+        <li>Item 1</li>
+        <li>Item 1</li>
+        <li>Item 1</li>
+    </ul>
+
+    <h2>Lista Ordenada</h2>
+    <ol class="lista">
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+        <li>Item 4</li>
+        <li>Item 5</li>
+    </ol>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus officiis dolorem <br> praesentium amet odit. Facere deleniti autem cumque aspernatur id.</p>
+
+    <h2>Tag 'pre'</h2>
+    <pre>
+        asdfasdfasdf
+        asdfasdfasdfas
+        asdfasdfasdfasd
+    </pre>
+
+    <h2>Imagens</h2>
     
+    <a href="sobre.html" target="_blank"><img src="https://avatars.githubusercontent.com/u/47084105?v=" alt="imagem de perfil de Tiago" width="128"></a>
+    
+    <h2>Links</h2>
+    <a href="https://www.google.com.br" target="_blank">Google</a>
+    <br>
+    <a href="sobre.html">Sobre Mim</a>
+    <br>
+    <a href="#home">Ir ao Topo</a>
+
+    <h2>Formulários</h2>
+    <form>
+        <h3>Formulário</h3>
+        <div>
+            <label for="texto">Texto</label>
+            <input id="texto" type="text">
+        </div>
+
+        <div>
+            <label for="numero">Número</label>
+            <input id="numero" type="number">
+        </div>
+
+        <div>
+            <label for="data">Data</label>
+            <input id="data" type="date">
+        </div>
+
+        <div>
+            <label for="email">E-mail</label>
+            <input id="email" type="email">
+        </div>
+
+        <div>
+            <label for="senha">Senha</label>
+            <input id="senha" type="password">
+        </div>
+        <button>Enviar</button>
+        <button type="reset">Cancelar</button>
+    </form>
+
+    <h2>Tabelas</h2>
+
+    <table>
+        <thead>
+            <tr>
+                <th>Nome</th>
+                <th>Idade</th>
+                <th>Sexo</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Conteudo</td>
+                <td>Conteudo</td>
+                <td>Conteudo</td>
+            </tr>
+            <tr>
+                <td>Conteudo</td>
+                <td>Conteudo</td>
+                <td>Conteudo</td>
+            </tr>
+            <tr>
+                <td>Conteudo</td>
+                <td>Conteudo</td>
+                <td>Conteudo</td>
+            </tr>
+            <tr>
+                <td>Conteudo</td>
+                <td>Conteudo</td>
+                <td>Conteudo</td>
+            </tr>
+            <tr>
+                <td>Conteudo</td>
+                <td>Conteudo</td>
+                <td>Conteudo</td>
+            </tr>
+        </tbody>
+        <caption>
+            Nota: Tabela de exemplo
+        </caption>
+    </table>
+
 </body>
 </html>
